--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+.idea
 
 # AWS User-specific
 .idea/**/aws.xml
@@ -212,7 +208,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+app/migrations-manager/.env.example
 .venv
 env/
 venv/
