--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,51 @@
 services:
-      oracle:
-        image: gvenzl/oracle-free:latest
-        environment:
-          ORACLE_DATABASE: smartlab
-          ORACLE_PASSWORD: oracle123
-          APP_USER: smartlab
-          APP_USER_PASSWORD: smartlab123
-        ports:
-          - "1521:1521"
-        healthcheck:
-          test: ["CMD", "healthcheck.sh"]
-          interval: 30s
-          timeout: 10s
-          retries: 5
-          start_period: 60s
+  oracle:
+    image: gvenzl/oracle-free:latest
+    environment:
+      ORACLE_DATABASE: smartlab
+      ORACLE_PASSWORD: oracle123
+      APP_USER: smartlab
+      APP_USER_PASSWORD: smartlab123
+    ports:
+      - "1521:1521"
+    healthcheck:
+      test: ["CMD", "healthcheck.sh"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+    networks:
+      - app-net
+
+  keycloak-db:
+    image: postgres:15
+    container_name: keycloak-db
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: secret
+    networks:
+      - app-net
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0
+    container_name: keycloak
+    command: start-dev
+    environment:
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://keycloak-db:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: secret
+      KC_HOSTNAME_STRICT: "false"
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - "7000:8080"
+    depends_on:
+      - keycloak-db
+    networks:
+      - app-net
+
+networks:
+  app-net:
+    driver: bridge
