--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,11 +23,7 @@ services:
     ports:
       - "1883:1883"
       - "9001:9001"
-    volumes:
-      - ./mosquitto/config:/mosquitto/config
-      - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/log:/mosquitto/log
-    command: mosquitto -c /mosquitto/config/mosquitto.conf
+    command: mosquitto -c /mosquitto-no-auth.conf
     healthcheck:
       test: ["CMD-SHELL", "mosquitto_pub -h localhost -t test -m 'health check' || exit 1"]
       interval: 30s
