--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   oracle:
     image: gvenzl/oracle-free:latest
@@ -17,19 +19,45 @@ services:
     networks:
       - app-net
 
-  mqtt:
-    image: eclipse-mosquitto:2.0
-    container_name: mqtt-broker
+  app:
+    build: .
     ports:
-      - "1883:1883"
-      - "9001:9001"
-    command: mosquitto -c /mosquitto-no-auth.conf
-    healthcheck:
-      test: ["CMD-SHELL", "mosquitto_pub -h localhost -t test -m 'health check' || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
+      - "5000:5000"
+    environment:
+      # Application Settings
+      FLASK_ENV: production
+      DEBUG: "true"
+      ENABLE_REQUEST_LOGGING: "true"
+
+      # API Info
+      APP_VERSION: "1.0.0"
+      API_NAME: "SmartLab API"
+      ENVIRONMENT: development
+
+      # JWT Configuration
+      JWT_SECRET_KEY: jwt-secret-change-in-production
+      JWT_ALGORITHM: HS256
+
+      # Oracle Database Configuration
+      ORACLE_HOST: oracle
+      ORACLE_PORT: 1521
+      ORACLE_SERVICE_NAME: FREEPDB1
+      ORACLE_USERNAME: smartlab
+      ORACLE_PASSWORD: smartlab123
+
+      # MQTT Configuration
+      MQTT_BROKER_HOST: mqtt
+      MQTT_BROKER_PORT: 1883
+      MQTT_QOS: 1
+      MQTT_KEEPALIVE: 60
+
+      # Optional: Temp User ID
+      # TEMP_USER_ID: 12345678-1234-5678-1234-123456789012
+    depends_on:
+      oracle:
+        condition: service_healthy
+      mqtt:
+        condition: service_healthy
     networks:
       - app-net
 
