--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       - "5000:5000"
     environment:
       # Application Settings
-      FLASK_ENV: production
+      FLASK_ENV: development
       DEBUG: "true"
       ENABLE_REQUEST_LOGGING: "true"
 
@@ -46,8 +46,9 @@ services:
       POSTGRES_PASSWORD: postgres
 
       # MQTT Configuration
-      MQTT_BROKER_HOST: mosquitto
+      MQTT_BROKER_HOST: 52.67.135.210
       MQTT_BROKER_PORT: 1883
+      MQTT_CLIENT_ID: smartlab-client
       MQTT_QOS: 1
       MQTT_KEEPALIVE: 60
 
